--- a/views/product/index.ejs
+++ b/views/product/index.ejs
@@ -29,7 +29,7 @@
                     <th scope="col">Product Origin Price</th>
                     <th scope="col">Quantity</th>
                     <th scope="col">
-                        <a href="/product?sort=ProductStoreCode">Product Store Code</a>
+                        <a href="/product/?sort=ProductStoreCode">Product Store Code</a>
                     </th>
                     <th scope="col">Actions</th>
                 </tr>
@@ -60,7 +60,7 @@
                         </td>
                         <td>
                             <a href="/product/<%= product._id %>/edit" class="btn btn-warning btn-sm">Edit</a>
-                            <form action="/product/<%= product._id %>?_method=DELETE" method="POST"
+                            <form action="/product/<%= product._id %>" method="POST"
                                 style="display:inline;">
                                 <button type="submit" class="btn btn-danger btn-sm">Delete</button>
                             </form>
